# framework

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api-reference.md  cli.md  elements.md  getting-started.md  plugins.md  settings.md  transforms.md  types.md
pyinstaller/: osib-worker.spec
src/: README.md  omoika.spec
src/omoika/: __init__.py  compiler.py  deps.py  errors.py  ipc_worker.py  messages.py  ob.py  output.py  plugins.py  repo_inspector.py  results.py  runtime.py  sets.py  settings.py  types.py  utils.py
src/omoika/cli/: __init__.py  console.py  display.py  logging.py  progress.py
src/omoika/elements/: __init__.py  base.py  displays.py  inputs.py
src/osintbuddy/: __init__.py  compiler.py  deps.py  ipc_worker.py  ob.py  plugins.py  repo_inspector.py  runtime.py
src/osintbuddy/elements/: __init__.py  displays.py
tests/: test_elements.py  test_ob_init.py  test_repo_inspector.py  test_sherlock_plugins.py  test_transform_error_reporting.py
